RESOLVED FIXED160397
MediaResourceLoader::requestResource should take a ResourceRequest&& as input
https://bugs.webkit.org/show_bug.cgi?id=160397
Summary MediaResourceLoader::requestResource should take a ResourceRequest&& as input
youenn fablet
Reported 2016-08-01 01:05:05 PDT
This would allow potentially removing a ResourceRequest copy.
Attachments
Patch (5.84 KB, patch)
2016-08-01 01:06 PDT, youenn fablet
no flags
Patch (7.37 KB, patch)
2016-08-01 03:19 PDT, youenn fablet
no flags
Patch (5.91 KB, patch)
2016-10-11 10:12 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2016-08-01 01:06:45 PDT
youenn fablet
Comment 2 2016-08-01 03:19:09 PDT
WebKit Commit Bot
Comment 3 2016-08-01 03:20:54 PDT
Attachment 285000 [details] did not pass style-queue: ERROR: Source/WebCore/platform/graphics/gstreamer/MainThreadNotifier.h:38: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 4 2016-10-11 10:12:00 PDT
Alex Christensen
Comment 5 2016-10-11 12:23:12 PDT
Comment on attachment 291273 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=291273&action=review > Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:583 > + // FIXME: request should be moved for efficiency I see no reason not to do that right now.
youenn fablet
Comment 6 2016-10-11 23:05:48 PDT
Comment on attachment 291273 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=291273&action=review >> Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:583 >> + // FIXME: request should be moved for efficiency > > I see no reason not to do that right now. request cannot be moved currently as it is a const. This is a result of priv->notifier.notify taking a std::function.
WebKit Commit Bot
Comment 7 2016-10-11 23:29:11 PDT
Comment on attachment 291273 [details] Patch Clearing flags on attachment: 291273 Committed r207190: <http://trac.webkit.org/changeset/207190>
WebKit Commit Bot
Comment 8 2016-10-11 23:29:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.